--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,17 @@
 Package: svydb
 Type: Package
-Title:
+Title: Survey statistics in a database.
 Version: 0.1.0
 Author: Charco Hui
-Maintainer: 
+Maintainer: Charco Hui <phui285@aucklanduni.ac.nz>
 Description: Survey statistics in a database.
-License: 
+License: GPL-3
 Encoding: UTF-8
-LazyData: true
-URL: http:
-Imports:
-        R6,
-     dplyr,
-    dbplyr,
-     rlang,
+LazyData: FALSE
+Depends: R6,
+    dplyr,
+    rlang,
     survey
-Suggests:
-          DBI,
-  MonetDBLite
+Suggests: DBI,
+    MonetDBLite,
+    dbplyr
